--- a/.github/workflows/daily_sync.yml
+++ b/.github/workflows/daily_sync.yml
@@ -13,6 +13,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: true
+          
+      - name: Set up Git identity
+        run: |
+            git config user.name "github-actions[bot]"
+            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
       - name: Add upstream
         run: git remote add upstream https://github.com/dbt-labs/dbt-core.git
@@ -21,7 +27,7 @@ jobs:
         run: git fetch upstream
 
       - name: Merge upstream changes
-        run: git merge --ff-only upstream/main
+        run: git merge upstream/main --no-edit || (git merge --abort && exit 1)
 
       - name: Push changes to fork
         run: git push origin main
